chore: add gitlab.rb

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,10 @@
         "backup-cron": "crontab",
         "**/*.env": "ini",
     },
-    "files.readonlyInclude": {}
+    "files.readonlyInclude": {
+        "gitlab.rb": true
+    },
+    "cSpell.words": [
+        "macvlan"
+    ]
 }
