--- a/template.env
+++ b/template.env
@@ -1,45 +1,20 @@
-CLOUDFLARED_TOKEN=xxx
-GITLAB_IPV4_ADDRESS=xxx
-GITLAB_OMNIBUS_CONFIG=
-"
-external_url 'https://gitlab.example.com'
+CLOUDFLARED_TOKEN="xxx"
 
-## Disbale prometheus to reduce memory usage.
-prometheus_monitoring['enable'] = false
+MACVLAN_NETWORK_NAME="xxx"
 
-### Email configs.
-gitlab_rails['smtp_enable'] = true
-gitlab_rails['smtp_address'] = 'smtpdm.aliyun.com'              # Replace it
-gitlab_rails['smtp_port'] = 465
-gitlab_rails['smtp_user_name'] = 'noreply@email.exmaple.com'    # Replace it
-gitlab_rails['smtp_password'] = 'xxx'                           # Replace it
-gitlab_rails['smtp_domain'] = 'email.example.com'               # Replace it
-gitlab_rails['smtp_authentication'] = 'login'
-gitlab_rails['smtp_enable_starttls_auto'] = false
-gitlab_rails['smtp_tls'] = true
-gitlab_rails['gitlab_email_from'] = 'noreply@email.exmaple.com' # Replace it
-gitlab_rails['gitlab_email_display_name'] = 'GitLab'
-gitlab_rails['gitlab_email_reply_to'] = 'support@exmaple.com'   # Replace it
+EXTERNAL_URL="https://gitlab.example.com"
 
-### Backup Configs.
-## The duration in seconds to keep backups.
-## 604800 is meant to be 30 days.
-gitlab_rails['backup_keep_time'] = 2592000
-## Consider using multipart uploads when file size reaches 100MB.
-## Enter a number in bytes.
-gitlab_rails['backup_multipart_chunk_size'] = 104857600
-## Skip parts of the backup. Comma separated.
-gitlab_rails['env'] = {
-  # Types which will be skipped by backup process.
-  'SKIP' => 'builds,artifacts,registry,pages'
-}
-## Bucket name
-gitlab_rails['backup_upload_remote_directory'] = 'xxx'          # Replace it
-## Bucket metadata
-gitlab_rails['backup_upload_connection'] = {
-  'provider' => 'AWS',             # Replace it
-  'region' => 'xxx',               # Replace it
-  'aws_access_key_id' => 'xxx',    # Replace it
-  'aws_secret_access_key' => 'xxx' # Replace it
-}
-"
+GITLAB_IPV4_ADDRESS="xxx"
+
+SMTP_ADDRESS="xxx"
+SMTP_USER_NAME="noreply@email.exmaple.com"
+SMTP_PASSWORD="xxx"
+SMTP_DOMAIN="email.example.com"
+GITLAB_EMAIL_FROM="noreply@email.exmaple.com"
+GITLAB_EMAIL_REPLY_TO="support@exmaple.com"
+
+BACKUP_UPLOAD_REMOTE_DIRECTORY="xxx"
+BACKUP_PROVIDER="xxx"
+BACKUP_REGION="xxx"
+BACKUP_AWS_ACCESS_KEY_ID="xxx"
+BACKUP_AWS_SECRET_ACCESS_KEY="xxx"
