--- a/template.env
+++ b/template.env
@@ -3,6 +3,7 @@ CLOUDFLARED_TOKEN="xxx"
 MACVLAN_NETWORK_NAME="xxx"
 
 EXTERNAL_URL="https://gitlab.example.com"
+REGISTRY_EXTERNAL_URL="https://registry.example.com"
 
 GITLAB_IPV4_ADDRESS="xxx"
 
