--- a/compose.yaml
+++ b/compose.yaml
@@ -32,7 +32,7 @@ services:
         external_url '${EXTERNAL_URL}'
         registry_external_url '${REGISTRY_EXTERNAL_URL}'
 
-        ## Disbale prometheus to reduce memory usage.
+        ## Disable prometheus to reduce memory usage.
         prometheus_monitoring['enable'] = false
 
         ## Disable the following features when create a new repository.
