--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,3 @@
 * text=auto eol=lf
 
-gitlab.rb linguist-detectable=false
-
-*.yaml linguist-detectable=true
-*.env linguist-detectable=true
+gitlab.rb -linguist-detectable
