feat(infra): create cloudflare-tunnel module
Use sops to encrypt sensitive input date.
Use S3 backend (Cloudflare R2) instead of local state files.

--- a/example.env
+++ b/example.env
@@ -1,6 +1,28 @@
-CLOUDFLARED_TOKEN="xxx"
+# ------------------------------
+# terraform / opentofu
+# ------------------------------
+
+# provide terraform backend config:
+# https://developer.hashicorp.com/terraform/language/backend/s3
+AWS_ENDPOINT_URL_S3=""
+AWS_ACCESS_KEY_ID=""
+AWS_SECRET_ACCESS_KEY=""
+
+# ------------------------------
+# docker compose network
+# ------------------------------
 
 MACVLAN_NETWORK_NAME="xxx"
+
+# ------------------------------
+# cloudflared
+# ------------------------------
+
+CLOUDFLARED_TOKEN="xxx"
+
+# ------------------------------
+# gitlab
+# ------------------------------
 
 EXTERNAL_URL="https://gitlab.example.com"
 REGISTRY_EXTERNAL_URL="https://registry.example.com"
