--- a/infra/.gitignore
+++ b/infra/.gitignore
@@ -15,6 +15,8 @@ crash.*.log
 # to change depending on the environment.
 *.tfvars
 *.tfvars.json
+# Include the encrypted file.
+!encrypted.tfvars.json
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
