chore: rearrange variables in example.env

--- a/example.env
+++ b/example.env
@@ -3,6 +3,7 @@
 # ------------------------------
 
 MACVLAN_NETWORK_NAME="xxx"
+GITLAB_IPV4_ADDRESS="xxx"
 
 # ------------------------------
 # cloudflared
@@ -14,11 +15,11 @@ CLOUDFLARED_TOKEN="xxx"
 # gitlab
 # ------------------------------
 
+# domain
 EXTERNAL_URL="https://gitlab.example.com"
 REGISTRY_EXTERNAL_URL="https://registry.example.com"
 
-GITLAB_IPV4_ADDRESS="xxx"
-
+# email
 SMTP_ADDRESS="xxx"
 SMTP_USER_NAME="noreply@email.exmaple.com"
 SMTP_PASSWORD="xxx"
@@ -26,6 +27,7 @@ SMTP_DOMAIN="email.example.com"
 GITLAB_EMAIL_FROM="noreply@email.exmaple.com"
 GITLAB_EMAIL_REPLY_TO="support@exmaple.com"
 
+# backup
 BACKUP_UPLOAD_REMOTE_DIRECTORY="xxx"
 BACKUP_PROVIDER="xxx"
 BACKUP_REGION="xxx"
