feat(infra): manage AWS SES (simple email service)

--- a/example.env
+++ b/example.env
@@ -21,11 +21,11 @@ REGISTRY_EXTERNAL_URL="https://registry.example.com"
 
 # email
 SMTP_ADDRESS="xxx"
-SMTP_USER_NAME="noreply@email.exmaple.com"
+SMTP_USER_NAME="xxx"
 SMTP_PASSWORD="xxx"
-SMTP_DOMAIN="email.example.com"
-GITLAB_EMAIL_FROM="noreply@email.exmaple.com"
-GITLAB_EMAIL_REPLY_TO="support@exmaple.com"
+SMTP_DOMAIN="gitlab.example.com"
+GITLAB_EMAIL_FROM="noreply@gitlab.exmaple.com"
+GITLAB_EMAIL_REPLY_TO="noreply@gitlab.exmaple.com"
 
 # backup
 BACKUP_UPLOAD_REMOTE_DIRECTORY="xxx"
