ci: dispatch workflows based on opentofu workspace

--- a/.github/workflows/infra-apply.yml
+++ b/.github/workflows/infra-apply.yml
@@ -2,6 +2,13 @@ name: Create and Update Infrastructure
 
 on:
   workflow_dispatch:
+    inputs:
+      tf-workspace:
+        description: opentofu workspace
+        required: true
+        type: choice
+        options:
+          - "default"
 
 jobs:
   tofu-plan:
@@ -20,6 +27,7 @@ jobs:
         run: |
           tofu init
           tofu validate
+          tofu workspace select ${{ github.event.inputs.tf-workspace }}
           tofu plan -out=tfplan
       - uses: cachix/install-nix-action@v31
       - name: Encrypt OpenTofu plan file
@@ -30,7 +38,7 @@ jobs:
       - name: Upload encrypted plan artifact
         uses: actions/upload-artifact@v4
         with:
-          name: tofu-plan-encrypted
+          name: tfplan-encrypted-${{ github.event.inputs.tf-workspace }}
           path: ${{ github.workspace }}/infra/tfplan-encrypted
           if-no-files-found: error
           retention-days: 5
@@ -38,7 +46,7 @@ jobs:
   tofu-apply:
     runs-on: ubuntu-latest
     needs: tofu-plan
-    environment: infrastructure
+    environment: infra-${{ github.event.inputs.tf-workspace }}
     if: github.ref == 'refs/heads/main' # Only run apply on main branch.
     defaults:
       run:
@@ -48,7 +56,7 @@ jobs:
       - name: Download encrypted plan artifact
         uses: actions/download-artifact@v4
         with:
-          name: tofu-plan-encrypted
+          name: tfplan-encrypted-${{ github.event.inputs.tf-workspace }}
           path: ${{ github.workspace }}/infra
       - uses: cachix/install-nix-action@v31
       - name: Decrypt OpenTofu plan file
@@ -64,4 +72,5 @@ jobs:
           SOPS_AGE_KEY: ${{ secrets.SOPS_AGE_KEY }}
         run: |
           tofu init
+          tofu workspace select ${{ github.event.inputs.tf-workspace }}
           tofu apply tfplan
