--- a/compose.yaml
+++ b/compose.yaml
@@ -56,10 +56,10 @@ services:
         ### Email configs.
         gitlab_rails['smtp_enable'] = true
         gitlab_rails['smtp_address'] = '${SMTP_ADDRESS}'
+        gitlab_rails['smtp_port'] = 587
         gitlab_rails['smtp_user_name'] = '${SMTP_USER_NAME}'
         gitlab_rails['smtp_password'] = '${SMTP_PASSWORD}'
         gitlab_rails['smtp_domain'] = '${SMTP_DOMAIN}'
-        gitlab_rails['smtp_tls'] = true
         gitlab_rails['gitlab_email_from'] = '${GITLAB_EMAIL_FROM}'
         gitlab_rails['gitlab_email_display_name'] = 'GitLab'
         gitlab_rails['gitlab_email_reply_to'] = '${GITLAB_EMAIL_REPLY_TO}'
