feat(infra): add ./scripts/send-email.sh to test AWS SES

--- a/example.env
+++ b/example.env
@@ -12,6 +12,13 @@ GITLAB_IPV4_ADDRESS="xxx"
 CLOUDFLARED_TOKEN="xxx"
 
 # ------------------------------
+# email test
+# ------------------------------
+
+# this is used by ./scripts/send-email.sh
+TEST_EMAIL_RECIPIENT="yusonglai64@gmail.com"
+
+# ------------------------------
 # gitlab
 # ------------------------------
 
