--- a/cliff.toml
+++ b/cliff.toml
@@ -9,30 +9,29 @@ header = """
 # A Tera template to be rendered for each release in the changelog.
 # See https://keats.github.io/tera/docs/#introduction
 body = """
-> {{ timestamp | date(format="%Y-%m-%d") }}
-{% if previous %}\
-    {% if previous.version and version %}
-        A full diff can be seen here: \
-        [{{ previous.version }}...{{ version }}]($REPO/compare/{{ previous.version }}...{{ version }})
-    {% endif %}\
-{% endif %}\
 {% for group, commits in commits | group_by(attribute="group") %}
     ## {{ group | striptags | trim | upper_first }}
     {% for commit in commits
     | filter(attribute="scope")
     | sort(attribute="scope") %}
-        - ({{commit.scope}}){% if commit.breaking %} [**breaking**]{% endif %} \
+        - ({{commit.scope}}) {% if commit.breaking %}[**breaking**] {% endif %}\
             {{ commit.message }} ({{ commit.id | truncate(length=7, end="") }})
     {%- endfor -%}
     {% raw %}\n{% endraw %}\
     {%- for commit in commits %}
         {%- if commit.scope -%}
         {% else -%}
-            - {% if commit.breaking %} [**breaking**]{% endif %}\
+            - {% if commit.breaking %}[**breaking**] {% endif %}\
                 {{ commit.message }} ({{ commit.id | truncate(length=7, end="") }})
         {% endif -%}
     {% endfor -%}
-{% endfor %}\n
+{% endfor %}
+{% if previous %}\
+    {% if previous.version and version %}\
+        **Full Changelog**: \
+        [{{ previous.version }}...{{ version }}]($REPO/compare/{{ previous.version }}...{{ version }})
+    {% endif %}\
+{% endif %}
 """
 # A Tera template to be rendered as the changelog's footer.
 # See https://keats.github.io/tera/docs/#introduction
