--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -26,23 +26,17 @@ jobs:
         shell: nix shell nixpkgs#tflint --quiet --command bash {0}
         run: tflint --chdir ./infra --recursive
 
-  tofu:
+  tofu-fmt:
     runs-on: ubuntu-latest
-    name: tofu init and validate
+    name: check formatting of opentofu
     defaults:
       run:
-        working-directory: ./infra # Set working directory for apply job.
+        working-directory: ./infra
     steps:
       - uses: actions/checkout@v6
       - uses: opentofu/setup-opentofu@v1
       - name: Run OpenTofu commands
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          SOPS_AGE_KEY: ${{ secrets.SOPS_AGE_KEY }}
-        run: |
-          tofu init
-          tofu validate
+        run: tofu fmt -check -diff -recursive
 
   trivy-fs:
     name: use trivy to scan files
