--- a/compose.yaml
+++ b/compose.yaml
@@ -27,8 +27,9 @@ services:
     restart: always
     shm_size: 256m
     volumes:
+      # Use the same timezone of host operating system.
       - /etc/localtime:/etc/localtime:ro
-      # Cron file used to backup gitlab periodically
+      # Cron file used to backup gitlab periodically.
       - ./backup-cron:/etc/cron.d/backup-cron:ro
       - gitlab-config:/etc/gitlab
       - gitlab-logs:/var/log/gitlab
@@ -38,11 +39,10 @@ services:
       macvlan:
         ipv4_address: ${GITLAB_IPV4_ADDRESS}
     environment:
-      # The script in GITLAB_POST_RECONFIGURE_SCRIPT
-      # is automatically executed on startup
+      # The script in GITLAB_POST_RECONFIGURE_SCRIPT is auto executed on startup.
       GITLAB_POST_RECONFIGURE_SCRIPT: |
         go-crond "/etc/cron.d/backup-cron" &
-      # Override /etc/gitlab/gitlab.rb
+      # Override "/etc/gitlab/gitlab.rb".
       GITLAB_OMNIBUS_CONFIG: |
         external_url '${EXTERNAL_URL}'
         registry_external_url '${REGISTRY_EXTERNAL_URL}'
