chore: pin a specific image tag for "gitlab/gitlab-ee"

--- a/compose.yaml
+++ b/compose.yaml
@@ -22,7 +22,7 @@ services:
     command: tunnel --no-autoupdate run --token ${CLOUDFLARED_TOKEN}
 
   gitlab:
-    image: gitlab/gitlab-ee
+    image: gitlab/gitlab-ee:18.9.1-ee.0
     container_name: gitlab
     restart: always
     shm_size: 256m
