--- a/example.env
+++ b/example.env
@@ -2,7 +2,7 @@
 # docker compose network
 # ------------------------------
 
-MACVLAN_NETWORK_NAME="xxx"
+IPVLAN_NETWORK_NAME="xxx"
 GITLAB_IPV4_ADDRESS="xxx"
 
 # ------------------------------
