--- a/compose.yaml
+++ b/compose.yaml
@@ -53,12 +53,20 @@ services:
         # ------------- #
         # uncategrozied
         # ------------- #
-        ## Disables prometheus to reduce memory usage.
-        prometheus_monitoring['enable'] = false
         ## Disables the following features when creating a new repository.
         gitlab_rails['gitlab_default_projects_features_snippets'] = false
         ## Disables product usage data (only works upon installation).
         gitlab_rails['initial_gitlab_product_usage_data'] = false
+
+        # -------------------- #
+        # resource consumption
+        # -------------------- #
+        ## Disables prometheus to reduce memory usage.
+        prometheus_monitoring['enable'] = false
+        # Disables clustered mode (2 by default).
+        puma['worker_processes'] = 0
+        # Reduce the number of sidekiq processes (20 by default).
+        sidekiq['concurrency'] = 4
 
         # ------------- #
         # email configs
@@ -77,7 +85,7 @@ services:
         # backup configs
         # -------------- #
         ## The duration in seconds to keep backups.
-        ## 604800 is meant to be 30 days.
+        ## (2592000 = 60 secs * 60 mins * 24 hrs * 30 days).
         gitlab_rails['backup_keep_time'] = 2592000
         ## Consider using multipart uploads when file size reaches 100MB.
         ## Enter a number in bytes.
